--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -30,13 +30,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Get changed files
-        id: changed-files
-        uses: tj-actions/changed-files@v45
-        with:
-          files: |
-              tests/*.conf
+        id: files
+        uses: UplandJacob/retrieve-changed-files@v4
 
-      - name: "Make JSON ${{ steps.changed-files.outputs.all_changed_files }}"
+      - name: "Make JSON ${{ steps.files.outputs.all }}"
         id: json
         run: |
 
@@ -45,8 +42,8 @@ jobs:
           # define OS variants where we can run test install
           images=("bookworm" "jammy" "noble")
           # read tests cases
-          if [[ -n "${{ steps.changed-files.outputs.all_changed_files }}" ]]; then
-              tests=($(grep -rwl ${{ steps.changed-files.outputs.all_changed_files }} -e "ENABLED=true" | cut -d":" -f1))
+          if [[ -n "${{ steps.files.outputs.all }}" ]]; then
+              tests=($(grep -rwl "${{ steps.files.outputs.all }}" -e "ENABLED=true" | cut -d":" -f1))
               else
               tests=($(grep -rwl tests/*.conf -e "ENABLED=true" | cut -d":" -f1))
           fi
